--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,279 @@
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'roboto';
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+:root {
+  --first-text-color: #212121;
+  --second-text-color: #757575;
+  --button-color: #2196f3;
+  --main-title-color: #ffffff;
+  --background-color: #2f303a;
+  --main-background-color: #e5e5e5;
+  --border-color: #afb1b8;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.btn {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  color: var(--main-title-color);
+  background-color: var(--button-color);
+  cursor: pointer;
+}
+
+.title {
+  font-family: Roboto;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--first-text-color);
+  margin: 0 auto;
+}
+
+/* title for : doing and team and clients */
+.backdrop {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 300ms, visibility 3000ms;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0.5) skew(20deg, 70deg) translate(100px, 100px);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+  position: absolute;
+  background-color: var(--main-title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform: scale(1) skew(0) translate(-50%, -50%);
+  transition: transform 300ms;
+  padding: 40px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: var(--main-title-color);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-close:hover .icon-close,
+.modal-close:focus .icon-close {
+  fill: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__label {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--second-text-color);
+}
+
+.modal__title {
+  width: 448px;
+  height: 23px;
+  font-family: Roboto;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+  color: var(--first-text-color);
+}
+
+.modal-form-field {
+  margin-bottom: 6px;
+}
+
+.modal__input {
+  display: block;
+  margin-top: 4px;
+  width: 448px;
+  height: 40px;
+  outline: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 40px;
+  padding-right: 25px;
+}
+
+.modal--icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 15px;
+  transition: fill 300ms linear;
+}
+
+.modal__input:focus + .modal--icon {
+  fill: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__text {
+  margin-top: 4px;
+  width: 448px;
+  height: 120px;
+  outline: none;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+}
+
+.modal__input:focus,
+.modal__text:focus {
+  border-color: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__input--wrap {
+  position: relative;
+}
+
+.modal__link--text {
+  margin-left: 3px;
+  color: var(--button-color);
+}
+
+.modal__check--text {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.modal__check--text::before {
+  content: '';
+  display: block;
+  width: 16px;
+  height: 15px;
+  background-image: url(../images/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-right: 7px;
+}
+
+.modal__check:checked + .modal__check--text::before {
+  background-image: url(../images/checked.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.modal-submit__btn {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-title-color);
+  width: 200px;
+  height: 50px;
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.modal-submit {
+  display: flex;
+  justify-content: center;
+}
+
 .header {
   background-color: var(--main-title-color);
   padding-top: 24px;
@@ -13,9 +289,6 @@
 
 .header__list {
   display: flex;
-}
-
-.header__list {
   font-family: roboto;
   font-weight: 500;
   font-size: 14px;
@@ -42,14 +315,6 @@
   color: var(--first-text-color);
 }
 
-.header__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header__item {
-  position: relative;
-}
-
 .header__link.current::after {
   content: '';
   height: 4px;
@@ -61,26 +326,34 @@
   bottom: -33px;
 }
 
-.header__link:hover,
-.header__link:focus {
+.header__link:hover, .header__link:focus {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__link--contacts {
-  color: var(--second-text-color);
+.header__item {
+  position: relative;
 }
 
-.header__item--contacts:not(:last-child) {
+.header__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header__link--contacts:hover,
-.header__link--contacts:focus {
+.header__link--contacts {
+  display: flex;
+  color: var(--second-text-color);
+}
+
+.header__link--contacts:hover, .header__link--contacts:focus {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header--icon {
+  fill: var(--second-text-color);
+  margin-right: 10px;
 }
 
 .header__link--contacts:hover .header--icon,
@@ -90,13 +363,8 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__link--contacts {
-  display: flex;
-}
-
-.header--icon {
-  fill: var(--second-text-color);
-  margin-right: 10px;
+.header__item--contacts:not(:last-child) {
+  margin-right: 50px;
 }
 
 .hero__container {
@@ -195,12 +463,12 @@
   margin-bottom: 0;
 }
 
-.doing__item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .doing__item {
   position: relative;
+}
+
+.doing__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .doing--text {
@@ -304,15 +572,14 @@
   color: var(--border-color);
 }
 
-.team--icon {
-  fill: currentColor;
-}
-
-.team__link--social:hover,
-.team__link--social:focus {
+.team__link--social:hover, .team__link--social:focus {
   background-color: #2196f3;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team--icon {
+  fill: currentColor;
 }
 
 .team__link--social:hover .team--icon,
@@ -320,15 +587,6 @@
   fill: var(--main-title-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__title {
-  font-family: Roboto;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--first-text-color);
 }
 
 .clients__list {
@@ -348,6 +606,16 @@
   border-color: var(--border-color);
 }
 
+.clients__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients__item:hover, .clients__item:focus {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: var(--button-color);
+}
+
 .clients__link {
   width: 100%;
   height: 100%;
@@ -356,10 +624,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.clients__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .clients--icon {
@@ -371,13 +635,6 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--button-color);
-}
-
-.clients__item:hover,
-.clients__item:focus {
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  border-color: var(--button-color);
 }
 
 .footer {
@@ -407,19 +664,17 @@
   color: var(--main-title-color);
 }
 
-.footer__item--contacts {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer__item--map:focus,
-.footer__item--map:hover {
+.footer__item--map:focus, .footer__item--map:hover {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__item--contacts:focus,
-.footer__item--contacts:hover {
+.footer__item--contacts {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer__item--contacts:focus, .footer__item--contacts:hover {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -427,12 +682,6 @@
 
 .footer__container {
   display: flex;
-}
-
-.footer-social {
-  display: flex;
-  flex-direction: column;
-  margin-left: 70px;
 }
 
 .footer--title {
@@ -443,6 +692,12 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+}
+
+.footer-social {
+  display: flex;
+  flex-direction: column;
+  margin-left: 70px;
 }
 
 .footer-social__list {
@@ -459,19 +714,18 @@
   align-items: center;
 }
 
+.footer-social__link:hover, .footer-social__link:focus {
+  background-color: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .footer-social__item:not(:last-child) {
   margin-right: 10px;
 }
 
 .footer--icon {
   fill: var(--main-title-color);
-}
-
-.footer-social__link:hover,
-.footer-social__link:focus {
-  background-color: var(--button-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-subscribe {
@@ -485,12 +739,6 @@
 .footer-subscribe__btn {
   width: 200px;
   height: 50px;
-  color: var(--main-title-color);
-  background-color: var(--button-color);
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -544,8 +792,7 @@
   padding-right: 22px;
 }
 
-.portfolio--btn:focus,
-.portfolio--btn:hover {
+.portfolio--btn:focus, .portfolio--btn:hover {
   color: var(--main-title-color);
   background-color: var(--button-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -594,28 +841,11 @@
   margin-right: 30px;
 }
 
-.portfolio__item--content {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 24px;
-  padding-left: 24px;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-}
-
-.portfolio__item:hover,
-.portfolio__item:focus {
+.portfolio__item:hover, .portfolio__item:focus {
   border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio__item--wrap {
-  position: relative;
-  overflow: hidden;
 }
 
 .portfolio__img--text {
@@ -638,5 +868,21 @@
   transform: translateY(0%);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__item--content {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+}
+
+.portfolio__item--wrap {
+  position: relative;
+  overflow: hidden;
 }
 /*# sourceMappingURL=main.css.map */
