--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -19,15 +19,16 @@
   padding-bottom: 6px;
   padding-left: 22px;
   padding-right: 22px;
-}
-.portfolio--btn:focus,
-.portfolio--btn:hover {
-  color: var(--main-title-color);
-  background-color: var(--button-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover {
+    color: var(--main-title-color);
+    background-color: var(--button-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .portfolio__item--title {
@@ -68,30 +69,14 @@
   flex-basis: calc((100% - 3 * 30px) / 3);
   margin-bottom: 30px;
   margin-right: 30px;
-}
-.portfolio__item--content {
-  display: flex;
-  flex-direction: column;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 24px;
-  padding-left: 24px;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-}
-
-.portfolio__item:hover,
-.portfolio__item:focus {
-  border: 1px solid #eeeeee;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio__item--wrap {
-  position: relative;
-  overflow: hidden;
+  &:hover,
+  &:focus {
+    border: 1px solid #eeeeee;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .portfolio__img--text {
   position: absolute;
@@ -107,9 +92,24 @@
   color: var(--main-title-color);
   transform: translateY(100%);
   transition: transform 300ms;
+  .portfolio__item:hover & {
+    transform: translateY(0%);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
-.portfolio__item:hover .portfolio__img--text {
-  transform: translateY(0%);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.portfolio__item--content {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+}
+
+.portfolio__item--wrap {
+  position: relative;
+  overflow: hidden;
 }
