--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -5,7 +5,7 @@
   margin-bottom: 50px;
 }
 
-.team__item--title {
+.team__item-title {
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -16,7 +16,7 @@
   margin-bottom: 10px;
 }
 
-.team__item--text {
+.team__item-text {
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.2;
@@ -42,20 +42,20 @@
 /* .team__item:not(:last-child) {
   margin-right: 30px;
 } */
-.team__item--content {
+.team__item-content {
   display: flex;
   flex-direction: column;
   background-color: var(--main-title-color);
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.team__list--social {
+.team__list-social {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 16px;
 }
-.team__item--social {
+.team__item-social {
   width: 44px;
   height: 44px;
   &:not(:last-child) {
@@ -63,7 +63,7 @@
   }
 }
 
-.team__link--social {
+.team__link-social {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -79,10 +79,10 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-.team--icon {
+.team-icon {
   fill: currentColor;
-  .team__link--social:hover &,
-  .team__link--social:focus & {
+  .team__link-social:hover &,
+  .team__link-social:focus & {
     fill: var(--main-title-color);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
