--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,7 +1,13 @@
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 50px;
+  margin-right: -30px;
+  margin-bottom: -30px;
+  @media screen and (max-width: 1200px) {
+    margin-top: 30px;
+  }
 }
 .clients__item {
   display: flex;
@@ -13,15 +19,20 @@
   border-radius: 4px;
   border-color: var(--border-color);
 
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-
   &:hover,
   &:focus {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     border-color: var(--button-color);
+  }
+  margin-right: 30px;
+  margin-bottom: 30px;
+  flex-basis: calc((100% - 2 * 30px) / 2);
+  @media screen and(min-width:768px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+  @media screen and(min-width:1200px) {
+    flex-basis: calc((100% - 6 * 30px) / 6);
   }
 }
 .clients__link {
