--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -3,12 +3,32 @@
 }
 .about__list {
   display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    // display: flex;
+    // flex-wrap: wrap;
+    // margin-bottom: -30px;
+    // margin-right: -30px;
+  }
 }
 .about__item {
-  width: 270px;
+  width: 450px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  // &:not(:last-child) {
+  //   margin-bottom: 30px;
+  // }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
 
-  &:not(:last-child) {
-    margin-right: 30px;
+    // flex-basis: calc((100% - 30px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    flex-basis: calc((100% - 4 * 30px) / 4);
   }
 }
 
@@ -20,6 +40,10 @@
   text-transform: uppercase;
   color: var(--first-text-color);
   margin-bottom: 10px;
+  @media screen and (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 .about__item-text {
   font-family: Roboto;
@@ -34,8 +58,15 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-  width: 270px;
+  width: 450px;
+  // width: 270px;
   height: 120px;
   border-radius: 4px;
   background: #f5f4fa;
+  @media screen and(min-width:768px) {
+    width: 354px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 270px;
+  }
 }
