--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,30 +8,42 @@
 .hero__title-bg {
   background-color: var(--background-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-bg.png);
+    url(../images/hero/hero-bg.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-size: cover;
+
+  padding-top: 118px;
+  padding-bottom: 118px;
+  @media screen and(min-width:1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-size: 1600px;
+  }
 }
 
 .hero__title {
   font-family: Roboto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-title-color);
-  width: 696px;
 
+  width: 360px;
   margin: 0 auto;
+  @media screen and(min-width:1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
 }
 .hero__button {
-  width: 216px;
-  height: 56px;
+  width: 212px;
+  height: 52px;
   border-radius: 4px;
   border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
