--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,10 +1,14 @@
 .title {
   font-family: Roboto;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin: 0 auto;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 /* title for : doing and team and clients */
