--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,7 +2,10 @@
   background-color: #f5f4fa;
 }
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .team__item-title {
@@ -39,9 +42,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-/* .team__item:not(:last-child) {
-  margin-right: 30px;
-} */
+
 .team__item-content {
   display: flex;
   flex-direction: column;
