--- a/css/main.css
+++ b/css/main.css
@@ -60,15 +60,40 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .btn {
@@ -83,12 +108,19 @@ body {
 
 .title {
   font-family: Roboto;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin: 0 auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 /* title for : doing and team and clients */
@@ -376,30 +408,46 @@ body {
 
 .hero__title-bg {
   background-color: var(--background-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.png);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-size: cover;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title-bg {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-size: 1600px;
+  }
 }
 
 .hero__title {
   font-family: Roboto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-title-color);
-  width: 696px;
+  width: 360px;
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+  }
+}
+
 .hero__button {
-  width: 216px;
-  height: 56px;
+  width: 212px;
+  height: 52px;
   border-radius: 4px;
   border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -412,14 +460,29 @@ body {
 
 .about__list {
   display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
 
 .about__item {
-  width: 270px;
+  width: 450px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
-.about__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .about__item {
+    width: 354px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__item {
+    width: 270px;
+    flex-basis: calc((100% - 4 * 30px) / 4);
+  }
 }
 
 .about__item-title {
@@ -430,6 +493,13 @@ body {
   text-transform: uppercase;
   color: var(--first-text-color);
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .about__item-title {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .about__item-text {
@@ -445,10 +515,22 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-  width: 270px;
+  width: 450px;
   height: 120px;
   border-radius: 4px;
   background: #f5f4fa;
+}
+
+@media screen and (min-width: 768px) {
+  .about__item-icon {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__item-icon {
+    width: 270px;
+  }
 }
 
 .doing {
@@ -496,7 +578,13 @@ body {
 }
 
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+  }
 }
 
 .team__item-title {
@@ -535,9 +623,6 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-/* .team__item:not(:last-child) {
-  margin-right: 30px;
-} */
 .team__item-content {
   display: flex;
   flex-direction: column;
@@ -591,8 +676,17 @@ body {
 
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 50px;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+
+@media screen and (max-width: 1200px) {
+  .clients__list {
+    margin-top: 30px;
+  }
 }
 
 .clients__item {
@@ -604,16 +698,27 @@ body {
   border: 1px solid;
   border-radius: 4px;
   border-color: var(--border-color);
-}
-
-.clients__item:not(:last-child) {
   margin-right: 30px;
+  margin-bottom: 30px;
+  flex-basis: calc((100% - 2 * 30px) / 2);
 }
 
 .clients__item:hover, .clients__item:focus {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-color: var(--button-color);
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    flex-basis: calc((100% - 6 * 30px) / 6);
+  }
 }
 
 .clients__link {
